test_src/compiler_errors/types/demotion/DemoteFloatToLong.b
class DemoteFloatToLong {
    void test(Long value) {
        value = 2.0f;
        println(value);
    }
}
